--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,10 @@
       name="description"
       content="Shiny Sky Window Cleaning Services - Professional and Reliable Window Cleaning Solutions"
     />
-    <meta name="keywords" content="window cleaning, professional services, shiny sky, reliable window cleaning, residential window cleaning, commercial window cleaning, Kent, London, Gravesend, Dartford, Bexley, Bromley, Orpington, Croydon, Purley, Surrey, Essex" />
+    <meta
+      name="keywords"
+      content="window cleaning, professional services, shiny sky, reliable window cleaning, residential window cleaning, commercial window cleaning, Kent, London, Gravesend, Dartford, Bexley, Bromley, Orpington, Croydon, Purley, Surrey, Essex"
+    />
     <meta name="author" content="Shiny Sky Window Cleaning Services" />
     <meta name="robots" content="index, follow" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -18,7 +21,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" rel="stylesheet">
+    <link
+      href="https://unicons.iconscout.com/release/v4.0.0/css/line.css"
+      rel="stylesheet"
+    />
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
@@ -29,12 +35,17 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>
-      Shiny Sky Window Cleaning Services
-    </title>
-
+    <title>Shiny Sky Window Cleaning Services</title>
   </head>
-  <body class="font-rubik text-base text-slate-900 dark:text-white dark:bg-slate-900">
+  <body
+    class="font-rubik text-base text-slate-900 dark:text-white dark:bg-slate-900"
+  >
+    <form name="contact" netlify netlify-honeypot="bot-field" hidden>
+      <input type="text" name="name" />
+      <input type="email" name="email" />
+      <input type="text" name="subject" />
+      <textarea name="message"></textarea>
+    </form>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
