--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     />
     <meta name="author" content="Shiny Sky Window Cleaning Services" />
     <meta name="robots" content="index, follow" />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logoMark.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
